tests/enforce-prometheus-annotation/resources/deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-one
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
      annotations:
        "prometheus.io/scrape": "true"
        "prometheus.io/path": "/metrics"
        "prometheus.io/port": "8080"
    spec:
      containers:
        - name: nginx
          image: nginx
