tests/enforce-prometheus-annotation/resources/deployment-3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-three
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: nginx
          image: nginx
